(PC-36500)[PRO] fix: gap between tipsbanner, delete usefulinformation - withdrawal tipsbanner

--- a/pro/src/pages/CollectiveOffer/CollectiveOffer/components/OfferEducational/OfferEducationalForm/OfferEducationalForm.module.scss
+++ b/pro/src/pages/CollectiveOffer/CollectiveOffer/components/OfferEducational/OfferEducationalForm/OfferEducationalForm.module.scss
@@ -35,7 +35,7 @@
 .description-info-boxes {
   display: flex;
   flex-direction: column;
-  gap: rem.torem(36px);
+  gap: rem.torem(8px);
 }
 
 .title,
